--- a/task1/index.html
+++ b/task1/index.html
@@ -11,7 +11,7 @@
 <h2>2. Вызов команды ping</h2>
 <img src="web_photo_2.PNG" width="650" height="300" alt="">
 <h2>3.Поиск с помощью команды nslookup A-записей и MX-записей домена kubsu.ru и kubsu-dev.ru</h2>
-<img src="web_photo_3.PNG" width="500" height="500" alt="">
+<img src="web_photo_3.jpg" width="500" height="500" alt="">
 <h2>4. Поиск с помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-dev.ru</h2>
 <img src="web_photo_4.PNG" width="500" height="500" alt="">
 <h2>5.Cоединение с учебным сервером с вашим логином и паролем по протоколу SFTP и скопировать на локальный компьютер файлы задания из каталога www.</h2>
